--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </ul>
     </nav>
 
-    <img src="gura.jpg" width="1336px" height="500px" style="margin-top: 10px;">
+    <img src="gura.jpg" style="margin-top: 10px; width:1336px; height:450px;">
 
     <div style="display: flex; padding: 20px;">
         <div style="flex: 3; padding-right: 20px;">
@@ -39,7 +39,7 @@
                 A~
             </p>
             <h2>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/-cI-wcdRoP4?si=ApIOuWPNXG9H9zOD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe style="width: 860px; height: 450px;"  src="https://www.youtube.com/embed/-cI-wcdRoP4?si=ApIOuWPNXG9H9zOD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </h2>
         </div>
 
