--- a/register.html
+++ b/register.html
@@ -21,7 +21,7 @@
         </ul>
     </nav>
 
-    <img src="gura.jpg" width="1336px" height="500px" style="margin-top: 10px;">
+    <img src="gura.jpg" style="margin-top: 10px; width:1336px; height:450px;">
 
     <div style="display: flex; padding: 20px;">
         <div style="flex: 3; padding-right: 20px;">
