--- a/beranda.html
+++ b/beranda.html
@@ -12,7 +12,7 @@
         </h1>
     </header>
 
-    <nav style="background-color: #e0e0e0; padding: 10px;">
+    <nav>
         <ul style="list-style-type: none; margin: 0; padding: 0;">
             <li style="display: inline; margin-right: 10px;"><a href="beranda.html">Beranda</a></li>
             <li style="display: inline; margin-right: 10px;"><a href="biodata.html">Biodata</a></li>
@@ -43,7 +43,7 @@
             </h2>
         </div>
 
-        <aside style="flex: 1; background-color: #f0f0f0; padding: 10px;">
+        <aside">
             <h3>Alternatif Link</h3>
             <p>Ini adalah sidebar dengan alternatif link :</p>
             <ul>
@@ -55,7 +55,7 @@
         </aside>
     </div>
 
-    <footer style="background-color: #e0e0e0; padding: 10px; text-align: center;">
+    <footer">
         <p>&copy; 2025 Shania Hery. All Rights Reserved.</p>
     </footer>
 </body>
