--- a/kontak.html
+++ b/kontak.html
@@ -64,7 +64,7 @@
 
         </div>
 
-        <aside style="flex: 1; background-color: #f0f0f0; padding: 10px;">
+        <aside">
             <h3>Alternatif Link</h3>
             <p>Ini adalah sidebar dengan alternatif link :</p>
             <ul>
