--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </h2>
         </div>
 
-        <aside">
+        <aside style="flex: 1; background-color: #f0f0f0; padding: 10px;">
             <h3>Alternatif Link</h3>
             <p>Ini adalah sidebar dengan alternatif link :</p>
             <ul>
