--- a/biodata.html
+++ b/biodata.html
@@ -20,7 +20,7 @@
         </ul>
     </nav>
 
-    <img src="gura.jpg" style="margin-top: 10px; width:1336px; height:450px;">
+    <img src="gura.jpg">
 
     <div style="display: flex; padding: 20px;">
         <div style="flex: 3; padding-right: 20px;">
