--- a/beranda.html
+++ b/beranda.html
@@ -21,7 +21,7 @@
         </ul>
     </nav>
 
-    <img src="gura.jpg" ">
+    <img src="gura.jpg" >
 
     <div style="display: flex; padding: 20px;">
         <div style="flex: 3; padding-right: 20px;">
