--- a/kontak.html
+++ b/kontak.html
@@ -59,7 +59,12 @@
             </form>
 
             <div class="map-container">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.7285832697303!2d128.24603127397555!3d-3.6492337427724633!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2d6ced0070341fc5%3A0x6d736278f05a6f44!2sShania&#39;s%20house!5e0!3m2!1sid!2sid!4v1743056826896!5m2!1sid!2sid" width="860" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.7285832697303!2d128.24603127397555!3d-3.6492337427724633!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2d6ced0070341fc5%3A0x6d736278f05a6f44!2sShania&#39;s%20house!5e0!3m2!1sid!2sid!4v1743056826896!5m2!1sid!2sid" width="860" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="100%" 
+                height="450" 
+                style="border:0; display: block; margin: 0 auto;" 
+                allowfullscreen 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade">></iframe>
             </div>
         </div>
 
